--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,23 +5,24 @@ font-family: 'Lora', serif; */
 
 /* variables */
 :root {
-    --dark:#2C3532;
-    --light:#FFCB9A;
-    --lightTeal:#D2E8E3;
-    --teal:#0F6466;
-    --brown:#D8B08C;
+    --dark: #2C3532;
+    --light: #FFCB9A;
+    --lightTeal: #D2E8E3;
+    --teal: #0F6466;
+    --brown: #D8B08C;
 }
 
 /* global */
 body {
     font-family: 'Hind Madurai', sans-serif;
-    background-color:var(--light);
-    color:var(--dark);
-    
+    background-color: var(--light);
+    color: var(--dark);
+
 }
 
 html {
-    overflow-x: hidden;;
+    overflow-x: hidden;
+    ;
 }
 
 
@@ -36,35 +37,33 @@ html {
 
 /* class */
 .active {
-    color: black;  
+    color: black;
 }
 
-.border-dark {
-
-}
+.border-dark {}
 
 .btn {
-    font-family:'Lora', serif;
-    background-color:var(--dark);
-    color:var(--lightTeal);
+    font-family: 'Lora', serif;
+    background-color: var(--dark);
+    color: var(--lightTeal);
 }
 
 .btn:hover {
-    background-color:var(--teal);
+    background-color: var(--teal);
 }
 
 .correct {
     animation: correct 1s cubic-bezier(0.47, 0, 0.745, 0.715);
-    color:var(--teal);
+    color: var(--teal);
 }
 
 .gamePlayContainer {
-    height:42vh;
+    height: 42vh;
 }
 
 .headerbg {
-    color:var(--lightTeal);
-    background-color:var(--teal)
+    color: var(--lightTeal);
+    background-color: var(--teal)
 }
 
 .scoreRow {
@@ -77,8 +76,8 @@ html {
 }
 
 .startButton {
-    background-color:var(--teal);
-    color:var(--lightTeal);
+    background-color: var(--teal);
+    color: var(--lightTeal);
     cursor: pointer;
 
 }
@@ -93,52 +92,92 @@ html {
     font-size: 3rem;
     margin: 0 1rem;
     transition: all 1s;
-    border-bottom:solid 3px var(--dark) !important;
+    border-bottom: solid 3px var(--dark) !important;
     width: 3rem;
     text-align: center;
-    height:4rem;
+    height: 4rem;
     animation: append .3s cubic-bezier(0.47, 0, 0.745, 0.715);
 
 }
 
 .setHeight {
-    height:250px;
+    height: 250px;
 }
 
 .timeLeft {
-    font-size:3rem;
+    font-size: 3rem;
 
 }
 
 .win {
     margin: 0 1.5rem;
     transform: scale(2);
-    border-bottom:solid 3px var(--teal) !important;
+    border-bottom: solid 3px var(--teal) !important;
 }
 
 /* animations */
 @keyframes append {
-	from {
-		transform: scale(0);
-		opacity: 0;
-   
-    
-	}
-	to {
-		transform: scale(1);
-		opacity: 1;	
+    from {
+        transform: scale(0);
+        opacity: 0;
 
-  
-	}
+
+    }
+
+    to {
+        transform: scale(1);
+        opacity: 1;
+
+
+    }
 }
 
 @keyframes correct {
-	from {
-		transform: scale(0);
-		opacity: 0;
-	}
-	to {
-		transform: scale(1);
-		opacity: 1;	
-	}
+    from {
+        transform: scale(0);
+        opacity: 0;
+    }
+
+    to {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+@media screen and (max-width:992px) {
+
+    .gameLetters {
+        font-size: 2.5rem;
+        width: 2.5rem;
+        height: 3.5rem;
+        margin: .5rem;
+    }
+
+    .win {
+        margin: 0 1rem;
+        transform: scale(1.3);
+    }
+
+
+}
+
+@media screen and (max-width:768px) {
+
+    .timer {
+        order: -1;
+        height:150px;
+    }
+}
+
+@media screen and (max-width:576px) {
+    .gameLetters {
+        font-size: 1.5rem;
+        width: 1.5rem;
+        height: 2rem;
+        margin: .25rem;
+    }
+
+    .timer {
+        order: -1;
+    }
 }
